Edited multiple pages

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
 
-    <div class = "menu">
+    <header>
       <ul>
         <li>Home</li>
         <li>Menu</li>
         <li>About Us</li>
         <li>Order Now</li>
       </ul>
-    </div>
+    </header>
 
     <div class = "section1">
       <img src="img/banner-bg.png" alt="Bob's Burgers Background" title="Bob's Burgers Background">
