--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>Home</li>
         <li>Menu</li>
         <li>About Us</li>
-        <li>Order Now</li>
+        <li><span>Order Now</span></li>
       </ul>
     </header>
 
@@ -26,7 +26,7 @@
     </div>
 
     <div class = "section2">
-      <h2>World's Best Burgers</h2>
+      <h2>World's Best <span>Burgers</span></h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
       <button>View Menu</button>
       <img src="img/bobs-burger.png" alt="Bob's Burgers Burger" title="Bob's Burgers Burger" height="150">
@@ -34,13 +34,13 @@
 
     <div class = "section3">
       <img src="img/bob-headshot.png" alt="Bob's Burgers Character" title="Bob's Burgers Character" height="250">
-      <h2>Dine-in or Take-out</h2>
+      <h2>Dine-in or <span>Take-out</span></h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
       <button>Contact Us</button>
     </div>
 
     <footer>
-      <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo" width="350">
+      <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo" width="300">
     </footer>
 
 
