--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </header>
 
     <div class = "section1">
-      <img src="img/banner-bg.png" alt="Bob's Burgers Background" title="Bob's Burgers Background">
+      <div class ="background-image">
+        <img src="img/banner-bg.png" alt="Bob's Burgers Background" title="Bob's Burgers Background">
+      </div>
       <h1>Bob's Burgers</h1>
       <button>Order Now</button>
     </div>
