--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
     </div>
 
     <div class = "section2">
-      <h2>World's Best <span>Burgers</span></h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-      <button>View Menu</button>
-      <img src="img/bobs-burger.png" alt="Bob's Burgers Burger" title="Bob's Burgers Burger" height="150">
+      <div class = "part1">
+        <h2>World's Best <span>Burgers</span></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <button>View Menu</button>
+      </div>
+      <div class = "part2">
+        <img src="img/bobs-burger.png" alt="Bob's Burgers Burger" title="Bob's Burgers Burger" height="150">
+      </div>
     </div>
 
     <div class = "section3">
