Edited home page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class ="background-image">
         <img src="img/banner-bg.png" alt="Bob's Burgers Background" title="Bob's Burgers Background">
       </div>
-      <h1>Bob's Burgers</h1>
+      <!--<h1>Bob's Burgers</h1>-->
       <button>Order Now</button>
     </div>
 
@@ -34,15 +34,19 @@
         <button>View Menu</button>
       </div>
       <div class = "part2">
-        <img src="img/bobs-burger.png" alt="Bob's Burgers Burger" title="Bob's Burgers Burger" height="150">
+        <img src="img/bobs-burger.png" alt="Bob's Burgers Burger" title="Bob's Burgers Burger" height="125">
       </div>
     </div>
 
     <div class = "section3">
-      <img src="img/bob-headshot.png" alt="Bob's Burgers Character" title="Bob's Burgers Character" height="250">
-      <h2>Dine-in or <span>Take-out</span></h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-      <button>Contact Us</button>
+      <div class = "part3">
+        <img src="img/bob-headshot.png" alt="Bob's Burgers Character" title="Bob's Burgers Character" height="250">
+      </div>
+      <div class = "part4">
+        <h2>Dine-in or <span>Take-out</span></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <button>Contact Us</button>
+      </div>
     </div>
 
     <footer>
