Fixed page layout

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
     </header>
 
     <div class = "section1">
-      <div class ="background-image">
+      <div class = "background-image">
         <img src="img/banner-bg.png" alt="Bob's Burgers Background" title="Bob's Burgers Background">
       </div>
       <!--<h1>Bob's Burgers</h1>-->
-      <button>Order Now</button>
+      <div class = "section5">
+        <button>Order Now</button>
+      </div>
     </div>
 
     <div class = "section2">
