--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
         <img src="img/banner-bg.png" alt="Bob's Burgers Background" title="Bob's Burgers Background">
       </div>
       <!--<h1>Bob's Burgers</h1>-->
-      <div class = "section5">
-        <button>Order Now</button>
+      <div class = "main-logo">
+        <div class = "section5">
+          <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo" width="300">
+          <button>Order Now</button>
+        </div>
       </div>
     </div>
 
