Made page updates

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <div class = "background-image">
         <img src="img/banner-bg.png" alt="Bob's Burgers Background" title="Bob's Burgers Background">
       </div>
+    
       <!--<h1>Bob's Burgers</h1>-->
-      <div class = "main-logo">
         <div class = "section5">
           <img src="img/logo.png" alt="Bob's Burgers Logo" title="Bob's Burgers Logo" width="300">
           <button>Order Now</button>
         </div>
       </div>
-    </div>
+      <!--</div>-->
 
     <div class = "section2">
       <div class = "part1">
